crates/typechecker/tests/snapshots/fixture_test__prelude_match_option.snap
---
source: crates/typechecker/tests/fixture_test.rs
assertion_line: 63
expression: snapshot
---
println: forall i. fn(i) -> Unit
Some: forall b. fn(b) -> Option[b]
None: forall b. Option[b]
Ok: forall c d. fn(d) -> Result[c, d]
Err: forall c d. fn(c) -> Result[c, d]
Cons: forall e. fn(e, List[e]) -> List[e]
Nil: forall e. List[e]
LT: Ordering
EQ: Ordering
GT: Ordering
unwrap_or: forall u. fn(Option[u], u) -> u
main: fn() -> Int
