crates/typechecker/tests/snapshots/fixture_test__prelude_result.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall c. fn(c, c) -> Bool
lt: forall d. fn(d, d) -> Bool
combine: forall c. fn(c, c) -> c
sub: forall c. fn(c, c) -> c
mul: forall c. fn(c, c) -> c
div: forall c. fn(c, c) -> c
neg: forall c. fn(c) -> c
show: forall c. fn(c) -> String
close: forall c. fn(own c) -> Unit
println: forall i. fn(i) -> Unit
Some: forall b. fn(b) -> Option[b]
None: forall b. Option[b]
Ok: forall c d. fn(d) -> Result[c, d]
Err: forall c d. fn(c) -> Result[c, d]
Cons: forall e. fn(e, List[e]) -> List[e]
Nil: forall e. List[e]
LT: Ordering
EQ: Ordering
GT: Ordering
ok_val: forall u. fn() -> Result[u, own Int]
err_val: forall a1. fn() -> Result[own String, a1]
main: fn() -> Int
